--- a/FrameWork/FrameWork.vcxproj
+++ b/FrameWork/FrameWork.vcxproj
@@ -155,7 +155,6 @@
     <ClInclude Include="CustomInclude.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="FieldItemManager.h" />
-    <ClInclude Include="DXUTsound.h" />
     <ClInclude Include="DeviceFont.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectManager.h" />
@@ -164,6 +163,11 @@
     <ClInclude Include="FmodSoundManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GameState.h" />
+    <ClInclude Include="GameStateInclude.h" />
+    <ClInclude Include="GameState_Clear.h" />
+    <ClInclude Include="GameState_GameOver.h" />
+    <ClInclude Include="GameState_LevelUp.h" />
     <ClInclude Include="Include.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="key.h" />
@@ -202,7 +206,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMng.cpp" />
-    <ClCompile Include="DXUTsound.cpp" />
     <ClCompile Include="DeviceFont.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -210,6 +213,9 @@
     <ClCompile Include="FmodSoundManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="GameState_Clear.cpp" />
+    <ClCompile Include="GameState_GameOver.cpp" />
+    <ClCompile Include="GameState_LevelUp.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="key.cpp" />
     <ClCompile Include="Logo.cpp" />
