--- a/FrameWork/FrameWork.vcxproj.filters
+++ b/FrameWork/FrameWork.vcxproj.filters
@@ -115,6 +115,9 @@
     <ClCompile Include="Weapon.cpp">
       <Filter>2. GameManager\Objects\Item</Filter>
     </ClCompile>
+    <ClCompile Include="CreditsPopUp.cpp">
+      <Filter>UI\Popup</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UIManager.h">
@@ -275,6 +278,12 @@
     </ClInclude>
     <ClInclude Include="Weapon.h">
       <Filter>2. GameManager\Objects\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Power.h">
+      <Filter>Globals</Filter>
+    </ClInclude>
+    <ClInclude Include="CreditsPopUp.h">
+      <Filter>UI\Popup</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
