--- a/FrameWork/FrameWork.vcxproj.filters
+++ b/FrameWork/FrameWork.vcxproj.filters
@@ -121,6 +121,9 @@
     <ClCompile Include="GameState_Clear.cpp">
       <Filter>2. GameManager\GameManager States</Filter>
     </ClCompile>
+    <ClCompile Include="CreditsPopUp.cpp">
+      <Filter>UI\Popup</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UIManager.h">
@@ -293,6 +296,12 @@
     </ClInclude>
     <ClInclude Include="GameStateInclude.h">
       <Filter>2. GameManager\GameManager States\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="CreditsPopUp.h">
+      <Filter>UI\Popup</Filter>
+    </ClInclude>
+    <ClInclude Include="Power.h">
+      <Filter>Globals</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
